--- a/papyrus2/style.css
+++ b/papyrus2/style.css
@@ -58,4 +58,7 @@ and Blueprint http://www.blueprintcss.org/
 @import url("css/infinite-scroll.css");
 @import url("css/media.css");
 
+@import url("css/p.css");
+@import url("css/util.css");
+
 
