--- a/papyrus2/style.css
+++ b/papyrus2/style.css
@@ -61,4 +61,7 @@ and Blueprint http://www.blueprintcss.org/
 @import url("css/p.css");
 @import url("css/util.css");
 
+@import url("fonts/webserveroff_italic_macroman/stylesheet.css");
+@import url("fonts/webserveroff_regular_macroman/stylesheet.css");
+
 
