make nav buttons look like keyboard keys

--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -29,9 +29,18 @@
   opacity: 1;
 }
 .p-nav-horiz a {
-  border-bottom: 20px solid rgb(255, 255, 255);
+  border-bottom: 17px solid rgb(255, 255, 255);
+  border-left: 17px solid transparent;
   color: white;
+  padding: 5px;
 }
 .p-nav-horiz a:hover {
   border-bottom-color: rgb(221, 44, 74);
+  border-left-color: rgba(255, 255, 255, 0.1);
+}
+.p-nav-horiz a:active {
+  position: relative;
+  top: 11px;
+  border-left-width: 6px;
+  border-bottom-width: 6px;
 }
