create welcome sign

--- a/papyrus2/css/elements.css
+++ b/papyrus2/css/elements.css
@@ -1,5 +1,5 @@
 html, body {
-  font-family: web_serveroff;
+  font-family: web_serveroff, sans-serif;
   font-size: 22px;
   line-height: 33px;
 }
@@ -8,4 +8,30 @@ a {
   color: inherit;
   text-decoration: none;
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+h1, h2, h3 {
+  margin: 0 0 0 15px;
+  opacity: 0.66;
+  font-style: italic;
+  font-variant: small-caps;
+}
+h1 {
+  font-size: 66px;
+  line-height: 66px;
+}
+h2 {
+  font-size: 44px;
+  line-height: 44px;
+}
+h3 {
+  font-size: 33px;
+  line-height: 33px;
+}
+
+p {
+  margin: 0 0 0 15px;
+  font-family: Baskerville, freight-text-pro, Cambria, Georgia, 'Times New Roman', Times, serif;
+  opacity: 0.5;
+  white-space: normal;
 }
