--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -1,6 +1,7 @@
 
 .p-bg-solid-dark {
   background-color: #191614;
+  color: white;
 }
 
 .p-layout-top-nav {
@@ -32,8 +33,8 @@
   font-style: italic;
   border-bottom: 17px solid rgb(255, 255, 255);
   border-right: 17px solid transparent;
-  color: white;
   padding: 5px;
+  color: white;
 }
 .p-keyboard-key:hover {
   border-bottom-color: rgb(221, 44, 74);
@@ -47,11 +48,8 @@
   border-bottom-width: 6px;
 }
 .p-keyboard-key.p-keyboard-key--mirror {
-  border-bottom: 17px solid rgb(255, 255, 255);
   border-right: 0;
   border-left: 17px solid transparent;
-  color: white;
-  padding: 5px;
 }
 .p-keyboard-key.p-keyboard-key--mirror:hover {
   border-bottom-color: rgb(221, 44, 74);
@@ -64,4 +62,41 @@
   left: auto;
   border-left-width: 6px;
   border-bottom-width: 6px;
+}
+
+.p-welcome-sign {
+  min-height: 350px;
+  min-width: 700px;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  font-style: italic;
+}
+
+.p-welcome-sign .p-welcome-sign-inner {
+  height: 350px;
+  width: 700px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-top: -175px;
+  margin-left: -350px;
+  white-space: nowrap;
+}
+.p-welcome-sign img {
+  padding: 15px;
+  height: inherit;
+  border-right: 2px solid rgb(255, 255, 255);
+  opacity: 0.5;
+}
+.p-welcome-sign figure,
+.p-welcome-sign section {
+  display: inline-block;
+  height: 350px;
+  width: 350px;
+  float: left;
+}
+.p-welcome-sign p {
+  position: absolute;
+  bottom: 0;
 }
