--- a/papyrus2/css/elements.css
+++ b/papyrus2/css/elements.css
@@ -1,3 +1,7 @@
+html {
+  overflow: hidden;
+}
+
 html, body {
   font-family: web_serveroff, sans-serif;
   font-size: 22px;
@@ -11,9 +15,8 @@ a {
 }
 
 h1, h2, h3 {
-  margin: 0 0 0 15px;
+  margin: 0 15px;
   opacity: 0.66;
-  font-style: italic;
   font-variant: small-caps;
 }
 h1 {
@@ -30,8 +33,9 @@ h3 {
 }
 
 p {
-  margin: 0 0 0 15px;
+  margin: 33px 15px 0 15px;
   font-family: Baskerville, freight-text-pro, Cambria, Georgia, 'Times New Roman', Times, serif;
   opacity: 0.5;
   white-space: normal;
 }
+
