--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -1,6 +1,6 @@
 
 .p-bg-solid-dark {
-  background-color: #191614;
+  background-color: rgb(25, 22, 20);
   color: white;
 }
 
@@ -19,12 +19,10 @@
   bottom: 0;
 }
 
-.p-nav-horiz {
-  /* font-size: 22px; */
-}
 .p-nav-horiz li {
   display: inline-block;
   opacity: 0.5;
+  height: 54px;
 }
 .p-nav-horiz li:hover {
   opacity: 1;
@@ -35,6 +33,7 @@
   border-right: 17px solid transparent;
   padding: 5px;
   color: white;
+  background-color: rgb(25, 22, 20);
 }
 .p-keyboard-key:hover {
   border-bottom-color: rgb(221, 44, 74);
@@ -65,7 +64,8 @@
 }
 
 .p-welcome-sign {
-  min-height: 350px;
+  /* 350px + 2 * 54px */
+  min-height: 458px;
   min-width: 700px;
   height: 100%;
   width: 100%;
@@ -81,7 +81,6 @@
   top: 50%;
   margin-top: -175px;
   margin-left: -350px;
-  white-space: nowrap;
 }
 .p-welcome-sign img {
   padding: 15px;
@@ -99,4 +98,36 @@
 .p-welcome-sign p {
   position: absolute;
   bottom: 0;
+}
+
+@media (max-width: 700px) {
+  .p-welcome-sign {
+    min-width: 0;
+    min-height: 0;
+  }
+  .p-welcome-sign .p-welcome-sign-inner {
+    margin: 0;
+    width: 100%;
+    height: auto;
+    position: static;
+  }
+
+  .p-welcome-sign section,
+  .p-welcome-sign figure {
+    width: 100%;
+    height: auto;
+    float: none;
+    text-align: center;
+  }
+
+  .p-welcome-sign img {
+    border: 0;
+    height: auto;
+    max-height: 350px;
+    padding: 0;
+  }
+
+  .p-welcome-sign p {
+    position: static;
+  }
 }
