small slider tweaks

--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -100,6 +100,15 @@
   position: absolute;
   bottom: 0;
 }
+.p-welcome-sign .p-welcome-sign-slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.5);
+}
 
 @media (max-width: 700px) {
   .p-welcome-sign {
@@ -136,25 +145,11 @@
   .p-welcome-sign p {
     position: static;
   }
+
+  .p-welcome-sign .p-welcome-sign-slide {
+    position: fixed !important;
+    visibility: hidden !important;
+  }
 }
 
-.p-welcome-sign-slide {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.5);
-}
 
-.p-transition-slider-Y {
-  transition: transform 0.5s;
-}
-.p-transition-slider-Y.p-transition-slider-Y--enter {
-}
-.p-transition-slider-Y.p-transition-slider-Y--exit {
-}
-.p-transition-slider-Y.p-transition-slider-Y--reset {
-  visibility: hidden;
-}
