fix keyboard key class

--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -42,7 +42,7 @@
 .p-keyboard-key:active {
   position: relative;
   top: 11px;
-  margin-left: 11px;
+  margin: 0 0 0 11px;
   border-right-width: 6px;
   border-bottom-width: 6px;
 }
@@ -57,7 +57,7 @@
 .p-keyboard-key.p-keyboard-key--mirror:active {
   position: relative;
   top: 11px;
-  margin-right: 11px;
+  margin: 0 11px 0 0;
   left: auto;
   border-left-width: 6px;
   border-bottom-width: 6px;
