--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -82,7 +82,7 @@
   margin-top: -175px;
   margin-left: -350px;
 }
-.p-welcome-sign img {
+.p-welcome-sign figure > img {
   padding: 15px;
   height: inherit;
   border-right: 2px solid rgb(255, 255, 255);
@@ -106,8 +106,10 @@
   left: 0;
   height: 100%;
   width: 100%;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.5);
+  overflow: hidden;
+  background-size: cover;
+  background-position: 50%;
+  background-repeat: no-repeat;
 }
 
 @media (max-width: 700px) {
