--- a/papyrus2/css/util.css
+++ b/papyrus2/css/util.css
@@ -10,6 +10,10 @@
   z-index: 5 !important;
 }
 
+.u-zi-animation {
+  z-index: 4 !important;
+}
+
 /**
  * For modern browsers
  * 1. The space content is one way to avoid an Opera bug when the
