make all the slides links

--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -111,6 +111,7 @@
   background-position: 50%;
   background-repeat: no-repeat;
   opacity: 0.9;
+  border: 0;
 }
 .p-welcome-sign .p-welcome-sign-slide:hover {
   opacity: 1;
