--- a/papyrus2/css/util.css
+++ b/papyrus2/css/util.css
@@ -40,3 +40,16 @@
 .u-cf {
     *zoom: 1;
 }
+
+
+@media (max-width: 700px) {
+  .u-only-desktop {
+    display: none;
+  }
+}
+
+@media  (min-width: 701px) {
+  .u-only-mobile {
+    display: none;
+  }
+}
