--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -164,8 +164,7 @@ ul.p-nav-vert li a {
   .p-welcome-sign {
     min-width: 0;
     min-height: 0;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow: scroll;
   }
   .p-welcome-sign .p-welcome-sign-inner {
     /* The margin is to allow for scrolling when the nav
