--- a/papyrus2/css/elements.css
+++ b/papyrus2/css/elements.css
@@ -10,7 +10,7 @@ html, body {
 a {
   color: inherit;
   text-decoration: none;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
 
 h1, h2, h3 {
@@ -22,8 +22,8 @@ h1, h2, h3 {
   white-space: nowrap;
 }
 h1 {
-  font-size: 55px;
-  line-height: 55px;
+  font-size: 66px;
+  line-height: 66px;
 }
 h2 {
   font-size: 44px;
@@ -35,21 +35,21 @@ h3 {
   line-height: 33px;
 }
 
-p, aside {
+p, ol, ul {
   /* Use padding instead of margin so the edges of text aren't 
    * cut off */
   padding: 33px 15px 0 15px;
   font-family: Baskerville, freight-text-pro, Cambria, Georgia, 'Times New Roman', Times, serif;
-  opacity: 0.5;
+  opacity: 0.7;
   white-space: normal;
   text-align: justify;
 }
 
-p:last-child {
+p:last-child, ol:last-child, ul:last-child {
   padding-bottom: 33px;
 }
 
-em, aside {
+em {
   font-style: italic;
 }
 
