--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -11,6 +11,16 @@
   background: white;
 }
 
+.p-bg-solid-dark a {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.p-content-area {
+  max-width: 730px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
 .p-layout-top-nav {
   position: fixed;
   top: 0;
@@ -52,6 +62,12 @@ ul.p-nav-vert li a {
   border: 0;
 }
 
+ul.p-nav-horiz {
+  margin: 0;
+  padding: 0;
+  font-family: "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  opacity: 1;
+}
 .p-nav-horiz li {
   display: inline-block;
   opacity: 0.5;
@@ -64,38 +80,29 @@ ul.p-nav-vert li a {
 }
 .p-keyboard-key {
   font-style: italic;
-  border-bottom: 17px solid rgb(255, 255, 255);
-  border-right: 17px solid transparent;
+  border-bottom: 17px solid rgb(255, 255, 255) !important;
+  border-right: 17px solid transparent !important;
   padding: 5px;
-  color: white;
-  background-color: rgb(25, 22, 20);
 }
 .p-keyboard-key:hover {
-  border-bottom-color: rgb(221, 44, 74);
-  border-right-color: rgba(255, 255, 255, 0.1);
+  border-bottom-color: rgb(221, 44, 74) !important;
+  border-right-color: rgba(255, 255, 255, 0.1) !important;
 }
 .p-keyboard-key:active {
   position: relative;
   top: 11px;
   margin: 0 0 0 11px;
-  border-right-width: 6px;
-  border-bottom-width: 6px;
+  border-right-width: 6px !important;
+  border-bottom-width: 6px !important;
 }
 .p-keyboard-key.p-keyboard-key--mirror {
-  border-right: 0;
-  border-left: 17px solid transparent;
-}
-.p-keyboard-key.p-keyboard-key--mirror:hover {
-  border-bottom-color: rgb(221, 44, 74);
-  border-left-color: rgba(255, 255, 255, 0.1);
+  border-right: 0 !important;
+  border-left: 17px solid transparent !important;
 }
 .p-keyboard-key.p-keyboard-key--mirror:active {
-  position: relative;
-  top: 11px;
-  margin: 0 11px 0 0;
-  left: auto;
-  border-left-width: 6px;
-  border-bottom-width: 6px;
+  margin: 0 11px 0 0 !important;
+  border-left-width: 6px !important;
+  border-bottom-width: 6px !important;
 }
 
 .p-slider {
@@ -198,12 +205,6 @@ ul.p-nav-vert li a {
   opacity: 1;
 }
 
-.p-article {
-  max-width: 730px;
-  padding: 15px;
-  margin: 0 auto;
-}
-
 @media (max-width: 700px) {
 
   * {
@@ -214,7 +215,7 @@ ul.p-nav-vert li a {
     opacity: 1;
   }
 
-  .p-article p {
+  .p-content-area p {
     opacity: 0.75;
   }
 
