pad title on home page

--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -236,6 +236,7 @@ ul.p-nav-horiz {
     height: auto;
     float: none;
     text-align: center;
+    padding-top: 66px;
   }
 
   .p-welcome-sign figure {
