--- a/papyrus2/css/forms.css
+++ b/papyrus2/css/forms.css
@@ -14,27 +14,28 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	border: 1px solid;
-	border-color: #ccc #ccc #bbb;
-	border-radius: 3px;
-	background: #e6e6e6;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-	color: rgba(0, 0, 0, .8);
 	cursor: pointer; /* Improves usability and consistency of cursor style between image-type 'input' and others */
 	-webkit-appearance: button; /* Corrects inability to style clickable 'input' types in iOS */
-	font-size: 12px;
-	font-size: 1.2rem;
+  outline: 0; /* don't show blue glowing outline */
+	font-size: 22px;
 	line-height: 1;
-	padding: .6em 1em .4em;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
+	padding: 12px 24px;
+  margin-bottom: 12px;
+	border: 1px solid rgba(0,0,0,0.6);
+	border-radius: 55px;
+  background-color: rgb(255, 255, 255);
+	color: rgba(0,0,0,0.8);
+  -webkit-transition: color 300ms, border-color 300ms;
+  transition: opacity 300ms, border-color: 300ms;
+  font-family: "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
-	border-color: #ccc #bbb #aaa;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
+  color: rgba(0,0,0,1);
+  border-color: rgba(0,0,0,1);
 }
 
 button:focus,
@@ -45,8 +46,7 @@ button:active,
 input[type="button"]:active,
 input[type="reset"]:active,
 input[type="submit"]:active {
-	border-color: #aaa #bbb #bbb;
-	box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
+  outline: 0;
 }
 
 input[type="checkbox"],
@@ -104,4 +104,44 @@ textarea {
 	padding-left: 3px;
 	vertical-align: top; /* Improves readability and alignment in all browsers */
 	width: 100%;
+}
+
+
+/* This is only here b/c I couldn't figure out how to
+ * customize the markup of the comments form */
+form.comment-form {
+  border: 1px solid rgba(0,0,0,0.3);
+  border-radius: 5px;
+}
+form.comment-form p {
+  font-size: 11px;
+  padding: 11px 15px 0 15px;
+  line-height: 11px;
+  vertical-align: middle;
+}
+form.comment-form label {
+  font-size: 33px;
+  line-height: 33px;
+  font-family: Lato;
+  margin-bottom: 11px;
+}
+form.comment-form .form-submit {
+  text-align: center;
+}
+form.comment-form textarea, form.comment-form input:not([type="submit"]) {
+  border: 1px solid gray;
+  border-radius: 0;
+  outline: 0;
+  padding: 11px 15px;
+  font-size: 22px;
+  line-height: 33px;
+  font-family: inherit;
+  width: 100%;
+}
+form.comment-form .math-captcha-form {
+  font-size: 33px;
+  font-family: "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+form.comment-form .comment-form-comment label {
+  display: none;
 }
