--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -210,7 +210,11 @@ ul.p-nav-horiz {
   height: 100%;
   background-size: cover;
   background-position: 50%;
-  text-shadow: 5px 5px rgba(0,0,0,0.5);
+}
+
+.p-bg-image-block .p-bg-image-block-overlay {
+  background-color: rgba(0,0,0,0.3);
+  padding: 33px;
 }
 
 @media (max-width: 700px) {
