--- a/papyrus2/css/util.css
+++ b/papyrus2/css/util.css
@@ -52,6 +52,13 @@
   margin-bottom: 0 !important;
 }
 
+.u-pack-horiz {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
 .u-scroll-vert {
   overflow-y: scroll !important;
 }
@@ -83,6 +90,10 @@
 
 .u-inline {
   display: inline !important;
+}
+
+.u-bg-fixed {
+  background-attachment: fixed !important;
 }
 
 @media (max-width: 700px) {
