--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -205,7 +205,7 @@ ul.p-nav-horiz {
 }
 
 .p-bg-image-block {
-  background-image: url(http://4.bp.blogspot.com/-poCM_DIA3qk/TxCiCH8kbzI/AAAAAAAAABk/SOlaKikgsGY/s1600/winding_road.jpg);
+  /* background image has to be set in-line */
   color: white;
   height: 100%;
   background-size: cover;
