--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -4,6 +4,15 @@
   color: white;
 }
 
+.p-nav-light {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: rgb(0,0,0);
+  border-bottom: 1px solid rgba(0,0,0,0.4);
+}
+.p-nav-light:hover {
+  background-color: rgba(255,255,255,1);
+}
+
 .p-bg-solid-dark::selection {
   background: white;
 }
@@ -74,6 +83,13 @@ ul.p-nav-horiz {
 .p-nav-horiz li:hover {
   opacity: 1;
 }
+
+.p-nav-horiz-link {
+  padding: 10px;
+  border: 0;
+  display: inline-block;
+}
+
 .p-keyboard-row {
   height: 54px;
 }
@@ -107,8 +123,6 @@ ul.p-nav-horiz {
 .p-slider {
   -webkit-transition: -webkit-transform 500ms;
   transition: transform 500ms;
-  height: 100%;
-  width: 100%;
   overflow: visible;
 }
 .p-slider.p-slider--up {
@@ -230,6 +244,15 @@ ul.p-nav-horiz {
 .p-bg-image-block .p-bg-image-block-overlay {
   background-color: rgba(0,0,0,0.3);
   padding: 33px;
+}
+
+.p-image-link {
+  border: 0;
+}
+
+img.p-icon {
+  vertical-align: bottom;
+  height: 33px;
 }
 
 @media (max-width: 700px) {
