--- a/papyrus2/css/util.css
+++ b/papyrus2/css/util.css
@@ -88,6 +88,11 @@
   height: 100% !important;
 }
 
+.u-full-width {
+  display: block;
+  width: 100% !important;
+}
+
 .u-inline {
   display: inline !important;
 }
