--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -5,12 +5,9 @@
 }
 
 .p-nav-light {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgb(255,255,255);
   color: rgb(0,0,0);
   border-bottom: 1px solid rgba(0,0,0,0.4);
-}
-.p-nav-light:hover {
-  background-color: rgba(255,255,255,1);
 }
 
 .p-bg-solid-dark::selection {
@@ -85,7 +82,7 @@ ul.p-nav-horiz {
 }
 
 .p-nav-horiz-link {
-  padding: 10px;
+  padding: 11px;
   border: 0;
   display: inline-block;
 }
@@ -246,8 +243,13 @@ ul.p-nav-horiz {
   padding: 33px;
 }
 
-.p-image-link {
+a.p-site-logo {
   border: 0;
+  padding: 7px;
+}
+a.p-site-logo img {
+  vertical-align: bottom;
+  height: 41px;
 }
 
 img.p-icon {
