fix display in IE11

--- a/papyrus2/css/p.css
+++ b/papyrus2/css/p.css
@@ -262,6 +262,7 @@ ul.p-nav-horiz ul.p-nav-vert {
 .p-site-logo img {
   vertical-align: bottom;
   width: 100px;
+  height: 100px;
   padding: 7px;
 }
 
